<resources>
    <string name="app_name">Sydney Guide</string>
    <string name="places_to_visit">Places to Visit</string>
    <string name="picnic_spots">Picnic Spots</string>
    <string name="restaurants">Great Cheap Eats</string>
    <string name="what">Nightlife</string>
    <string name="exit">Exit</string>
    <string name="picture_description">Picture of the location</string>
    <string name="OK">OK</string>
    <string name="confirm_exit">Do you to exit?</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string-array name="categories_array">
        <item>@string/places_to_visit</item>
        <item>@string/picnic_spots</item>
        <item>@string/restaurants</item>
        <item>@string/what</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu_places_visit">@string/places_to_visit</string>
    <string name="nav_menu_picnic_spots">@string/picnic_spots</string>
    <string name="nav_menu_restaurants">@string/restaurants</string>
    <string name="nav_menu_what">@string/what</string>
    <string name="nav_menu_exit">@string/exit</string>
    <string name="c00_circular_quay">Circular Quay</string>
    <string name="c00_circular_quay_description">Some of the best attractions in the world are in Circular Quay, on the waterfront of beautiful Sydney Harbour. With ferries, trains and buses arriving and departing the quay, it’s also a great place to get transport to other world-famous attractions near the city. Simply catch the 333 bus to Bondi Beach or the ferry to Manly Beach, or explore a range of other options at your leisure.\n\nBegin your discovery of the quay by strolling along the harbour foreshore to the Sydney Opera House and the Royal Botanic Garden. Along the way, you\'ll find some great spots for the perfect photograph of Sydney\'s favourite icons - the Sydney Harbour Bridge and the Sydney Opera House.\n\nAmong the many things to do, art lovers will be enthralled with a visit to the Museum of Contemporary Art Australia, on the western side of the quay, where you’ll find The Rocks. Explore the cobbled laneways and heritage buildings in the historic Rocks, considered the birthplace of modern Sydney. Cafes, bars and restaurants dot the eastern and western sides of Circular Quay, offering sublime harbour views with delicious food and drinks.</string>
    <string name="c00_circular_quay_address">Circular Quay, Sydney NSW 2000</string>
    <string name="c00_circular_quay_map_url">https://www.google.com.au/maps/place/Circular+Quay,+Sydney+NSW+2000/@-33.8617374,151.2021292,15z/data=!4m13!1m7!3m6!1s0x6b12ae69d26aafad:0x7f9b21ebd5b57ce0!2sCircular+Quay,+Sydney+NSW+2000!3b1!8m2!3d-33.861756!4d151.2108839!3m4!1s0x6b12ae69d26aafad:0x7f9b21ebd5b57ce0!8m2!3d-33.861756!4d151.2108839</string>
    <string name="c00_circular_quay_web_adr">en.wikipedia.org/wiki/Circular_Quay</string>
    <string name="c00_darling_harbour">Darling Harbour</string>
    <string name="c00_darling_harbour_description">Day or night, Darling Harbour in the heart of Sydney is captivating with great entertainment, amazing wildlife, waterfront dining, wine and cocktail bars, and late-night dancing. Enjoy encounters with penguins, sharks and koalas. Climb aboard tall ships and take the kids to a fabulous playground.</string>
    <string name="c00_darling_harbour_address">Darling Harbour, Sydney NSW 2000</string>
    <string name="c00_darling_harbour_map_url">https://www.google.com.au/maps/place/Darling+Harbour/@-33.8750938,151.1960613,16z/data=!4m12!1m6!3m5!1s0x6b12ae47076bdbb7:0x738f78eda4ded6f0!2sDarling+Harbour!8m2!3d-33.87488!4d151.2009!3m4!1s0x6b12ae47076bdbb7:0x738f78eda4ded6f0!8m2!3d-33.87488!4d151.2009</string>
    <string name="c00_darling_harbour_web_adr">www.darlingharbour.com</string>
    <string name="c00_bondi_beach">Bondi Beach</string>
    <string name="c00_bondi_beach_description">With white sands, curling waves and sandstone cliffs, Bondi Beach is Australia’s most famous beach and a world icon. The jewel of Sydney’s laid-back beach lifestyle, Bondi has something for everyone, from swimming, surfing and sunbathing to a spectacular coastal walk and delicious places to eat.\n\nOnly 30 minutes by public transport from Town Hall in the city centre, Bondi is home to one of the oldest surf lifesaving clubs in the world and one of Australia’s oldest swimming clubs, iconic Bondi Icebergs at the southern end of the beach. You can swim laps with the Icebergs in the Bondi Baths.</string>
    <string name="c00_bondi_beach_address">Bondi Beach, Sydney NSW 2026</string>
    <string name="c00_bondi_beach_map_url">https://www.google.com.au/maps/place/Bondi+Beach+NSW+2026/@-33.893144,151.273114,15z/data=!4m13!1m7!3m6!1s0x6b12ad9c447281c7:0x20c31809c62de978!2sBondi+Beach+NSW+2026!3b1!8m2!3d-33.8914755!4d151.2766845!3m4!1s0x6b12ad9c447281c7:0x20c31809c62de978!8m2!3d-33.8914755!4d151.2766845</string>
    <string name="c00_bondi_beach_web_adr">en.wikipedia.org/wiki/Bondi_Beach</string>
    <string name="c00_taronga_zoo">Taronga Zoo</string>
    <string name="c00_taronga_zoo_description">One of Sydney\'s most famous attractions, the award-winning Taronga Zoo is home to over 4,000 animals, including Australian native wildlife, as well as rare and endangered exotic animals. Overlooking the magnificent Sydney Harbour, Taronga Zoo is just 12 minutes from the city by ferry. Open 365 days a year, admission includes daily keeper talks and shows, and access to the Sky Safari, Sydney\'s only cable car.</string>
    <string name="c00_taronga_zoo_address">Bradleys Head Rd, Mosman NSW 2088</string>
    <string name="c00_taronga_zoo_map_url">https://www.google.com.au/maps/place/Taronga+Zoo/@-33.8430217,151.239719,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12ac245aaaaaab:0xaeb9849c7a29e226!8m2!3d-33.8430217!4d151.241913</string>
    <string name="c00_taronga_zoo_web_adr">taronga.org.au</string>
    <string name="c00_the_rocks">The Rocks</string>
    <string name="c00_the_rocks_description">As the strip of land where European settlers chose to step ashore in 1788, The Rocks is the birthplace of modern Sydney. It has elvolved from a British colony of convicts to a thriving 21st century entertainment precinct.\n\nAmble along on cobbled laneways, enjoy a cool drink in Australia’s oldest pubs, and marvel at iconic attractions – the Sydney Opera House and the Sydney Harbour Bridge. For breathtaking views of beautiful Sydney Harbour, ascend the bridge with BridgeClimb Sydney or go to the Pylon Lookout.\n\nA great way to see The Rocks is on foot. There are markets, museums, galleries and delicious food and wine experiences.</string>
    <string name="c00_the_rocks_address">The Rocks NSW 2000</string>
    <string name="c00_the_rocks_map_url">https://www.google.com.au/maps/place/The+Rocks+NSW+2000/@-33.8587568,151.2058193,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12ae42b65d8fb3:0x5017d681632cd60!8m2!3d-33.85985!4d151.20901</string>
    <string name="c00_the_rocks_web_adr">en.wikipedia.org/wiki/The_Rocks,_Sydney</string>
    <string name="c00_chinatown">Chinatown</string>
    <string name="c00_chinatown_description">With all the colour and excitement of an Asian marketplace, Chinatown and Haymarket offer an enticing mix of restaurants, noodle bars, food halls, and shops and markets full of bargains. Enjoy world-class shows too at the historic Capitol Theatre, a beautiful venue on Campbell Street.\n\nThe food experiences are amazing. From Chinese and Cantonese to Malaysian, Thai and Vietnamese, the dumpling houses, neon-lit nooks and food courts of Chinatown and Haymarket are irresistible. You’ll find a delicious range of restaurants, from yum cha palaces to hole-in-the-wall eateries.</string>
    <string name="c00_chinatown_address">Chinatown, Haymarket NSW 2000</string>
    <string name="c00_chinatown_map_url">https://www.google.com.au/maps/place/Chinatown/@-33.8792953,151.2035759,19z/data=!4m5!3m4!1s0x6b12ae249c20d251:0x6d49e024c3093a2f!8m2!3d-33.8790999!4d151.2045271</string>
    <string name="c00_chinatown_web_adr">sydney-chinatown.info</string>
    <string name="c00_manly">Manly</string>
    <string name="c00_manly_description">Manly’s harmonious balance of carefree beach life and urban sophistication makes it one of Sydney’s most popular playgrounds. Whether you are looking to surf, swim, shop or wine and dine, you’ll be able to thoroughly immerse yourself in Manly. For spectacular views, take a ferry from Circular Quay across majestic Sydney Harbour to Manly Wharf.\n\nSituated between a tranquil inner-harbour beach on one side and a popular surf beach on the other, Manly combines a laid-back beachside attitude with sophisticated dining and shopping.\n\nManly’s long ocean-side stretch of sand, running all the way from Queenscliff Beach to North Steyne Beach and Manly Beach, has long held a strong attraction for walkers, bathers and surfers alike.</string>
    <string name="c00_manly_address">Manly, NSW 2095</string>
    <string name="c00_manly_map_url">https://www.google.com.au/maps/place/Manly+Beach/@-33.7964782,151.2845927,16z/data=!4m13!1m7!3m6!1s0x6b12ab09219bcc2b:0xa97f26bebad87850!2sManly+Beach!3b1!8m2!3d-33.7931501!4d151.2876488!3m4!1s0x6b12ab03f1142643:0x8a4d90a174387a16!8m2!3d-33.7931503!4d151.2876485</string>
    <string name="c00_manly_web_adr">www.manlyaustralia.com.au</string>
    <string name="c00_watsons_bay">Watsons Bay</string>
    <string name="c00_watsons_bay_description">Enjoy stunning views of Sydney Harbour and fresh seafood in Watsons Bay, home to the celebrated seafood restaurant Doyles on the Beach. You can relax with a family picnic in a pretty harbourside park and take a dip at beautiful harbourside beaches. Walk to South Head for whale watching.\n\nWith lovely beaches, marvellous views and delicious seafood, Watsons Bay on the South Head peninsula in Sydney’s east is a delightful day trip. Australia’s oldest fishing village is home to waterfront restaurants, great walking trails, and a harbourside park perfect for family picnics.</string>
    <string name="c00_watsons_bay_address">Watsons Bay NSW 2030</string>
    <string name="c00_watsons_bay_map_url">https://www.google.com.au/maps/place/Watsons+Bay+NSW+2030/@-33.8401202,151.2642798,14z/data=!3m1!4b1!4m5!3m4!1s0x6b12ac899335bc45:0x5017d681632cee0!8m2!3d-33.8398183!4d151.2816573</string>
    <string name="c00_watsons_bay_web_adr">en.wikipedia.org/wiki/Watsons_Bay,_New_South_Wales</string>
    <string name="c00_paddington">Paddington</string>
    <string name="c00_paddington_description">Visit the famous Paddington Markets, browse stylish boutiques on Oxford and William streets, and enjoy beautifully restored heritage pubs in Paddington, an elegant inner Sydney neighbourhood with rows of pretty Victorian terrace houses. There are cutting-edge galleries and cabaret to enjoy, too.\n\nDiscover the delights of Paddington, from designer boutiques to the iconic Paddington Markets, wonderful galleries and beautifully restored heritage pubs. Sophisticated and creative, this inner Sydney neighbourhood is where style meets taste, with the enticing Intersection and a delicious range of restaurants and cafes.\n\nOxford Street is a great place to start. You’ll find stylish boutiques, great pubs, delightful cafes, and the Chauvel Cinema’s old world charm in heritage-listed Paddington Town Hall, built in 1891. Across the road is the Magician’s Cabaret, where dinner is accompanied by dance, song and magic tricks.</string>
    <string name="c00_paddington_address">395 Oxford St, Paddington NSW 2021</string>
    <string name="c00_paddington_map_url">https://www.google.com.au/maps/place/Paddington+Markets/@-33.8869447,151.2275479,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12ae06ef3eca9b:0x77173e8ecd16c439!8m2!3d-33.8869492!4d151.2297366</string>
</resources>