<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_places_visit"
            android:title="@string/nav_menu_places_visit" />
        <item
            android:id="@+id/nav_picnic_spots"
            android:title="@string/nav_menu_picnic_spots" />
        <item
            android:id="@+id/nav_restaurants"
            android:title="@string/nav_menu_restaurants" />
        <item
            android:id="@+id/nav_what"
            android:title="@string/nav_menu_what" />
    </group>

    <group
        android:id="@+id/nav_menu_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_exit"
            android:title="@string/nav_menu_exit" />
    </group>

</menu>
