<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_margin"
    android:layout_marginLeft="@dimen/activity_margin"
    android:layout_marginStart="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context=".LocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/location_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_height"
            android:contentDescription="@string/picture_description"
            android:scaleType="centerCrop"
            tools:src="@drawable/c00_circular_quay" />

        <TextView
            android:id="@+id/location_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/c00_circular_quay_description" />

        <TextView
            android:id="@+id/location_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:drawableLeft="@drawable/ic_location_on"
            android:drawableStart="@drawable/ic_location_on"
            android:gravity="center_vertical"
            tools:text="@string/c00_circular_quay_address" />

        <TextView
            android:id="@+id/location_web_adr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_earth"
            android:drawableStart="@drawable/ic_earth"
            android:gravity="center_vertical"
            tools:text="@string/c00_circular_quay_web_adr" />

        <Button
            android:id="@+id/location_button_ok"
            style="@style/ButtonStyle"
            android:layout_gravity="end"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/OK" />

    </LinearLayout>

</ScrollView>
